<resources>
    <array name="nav_drawer_icons">
        <item>@drawable/report</item>
        <item>@drawable/installation</item>
        <item>@drawable/inventory</item>
        <item>@drawable/users</item>
        <item>@drawable/logout</item>
    </array>

    <!--<Login in screen strings>-->
    <string name="app_name">COC Manager</string>
    <string name="txt_login">Login</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_name">Name</string>
    <string name="txt_email">Enter Email</string>

    <!--<Hamburger strings>-->
    <string name="txt_password">Enter Password</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_installation">Installation</string>
    <string name="nav_item_inventary">Inventory</string>
    <string name="nav_item_summary">Summary</string>
    <string name="nav_item_users">Users</string>

    <!--<drawer close open strings>-->
    <string name="nav_item_logout">Log Out</string>
    <string name="drawer_open">Open</string>

    <!--<installation home fragment strings>-->
    <string name="drawer_close">Close</string>
    <string name="txt_installation">Installation</string>
    <string name="txt_transport">Transport</string>

    <!--<create>-->
    <string name="txt_pipeline">Pipeline</string>
    <string name="txt_available_stock">Available Stock</string>
    <string name="txt_stock_in">Stock In</string>

    <!--<>-->
    <string name="txt_stock_out">Stock Out</string>
    <string name="txt_consumables_add_ons">Consumables &amp; Add Ons</string>

    <string name="txt_item">Select Item</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_clinic_id">Clinic id</string>
    <string name="txt_clinic_name">Clinic Name</string>
    <string name="txt_client_name">Client Name</string>
    <string name="txt_clinic_date">22 july 2020</string>
    <string name="txt_clinic_location">Location</string>
    <string name="txt_item_category">Select Item Category</string>
    <string name="txt_item_name">Item Name</string>

    <!--<Add New Stock>-->
    <string name="txt_item_count">Item Count</string>
    <string name="txt_clinic_id_name">Clinic ID</string>

    <!--<>-->
    <string name="txt_installation_date">Installation Date</string>
    <string name="txt_address">Address</string>
    <string name="txt_status">Status</string>
    <string name="txt_app_version">App Version</string>
    <string name="txt_last_sync">Last Sync</string>
    <string name="txt_licence_expiry">Licence Expiry</string>
    <string name="txt_actofit_expiry">Actofit End Date</string>
    <string name="txt_gmail_id">Gmail Id</string>
    <string name="txt_gmail_password">Gmail Password</string>
    <string name="txt_actofit_id">Actofit ID</string>
    <string name="txt_actofit_password">Actofit Password</string>
    <string name="txt_installed_by">Installed By</string>
    <string name="txt_operator_name">Operator Name</string>
    <string name="txt_operator_number">Operator Number</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_clinic_name_1">Clinic Name 1</string>


    <string name="txt_clinic_name_2">Clinic Name 2</string>
    <string name="txt_clinic_name_3">Clinic Name 3</string>
    <string name="txt_no_user">-Select-</string>

    <!--<user type>-->
    <string name="txt_user_admin">Administrator</string>
    <string name="txt_user_customer">Customer</string>
    <string name="txt_user_normal">User</string>
    <string name="txt_no_gender">-Select-</string>

    <!--gender array text-->
    <string name="txt_gender_male">Male</string>
    <string name="txt_gender_female">Female</string>
    <string name="txt_item_name0">No item Selected</string>

    <!--<item name>-->
    <string name="txt_item_name1">Item Name 1</string>
    <string name="txt_item_name2">Item Name 2</string>
    <string name="txt_item_name3">Item Name 3</string>
    <string name="txt_item_name4">Item Name 4</string>
    <string name="txt_category_name0">No item Selected</string>

    <!--<category name>-->
    <string name="txt_category_name1">In House</string>
    <string name="txt_category_name2">Vendor</string>
    <string name="txt_category_name3">Factory</string>
    <string name="txt_stock_out_category">No item Selected</string>

    <!--<stock out category>-->
    <string name="txt_stock_out_category1">In House</string>
    <string name="txt_stock_out_category2">Client</string>
    <string name="txt_stock_out_category3">Factory</string>
    <string name="txt_stock_out_category4">Damage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_add_new">Add New Form</string>
    <string name="txt_add_pipeline">Add Pipeline Form</string>

    <!--<Add new Pipeline>-->
    <string name="txt_installataion_type">Installation Type</string>
    <string name="txt_pipeline_details">Pipeline Machine Details</string>
    <string name="txt_move_to_transport">Move To Transport</string>
    <string name="txt_transport_detail">Transport Machine Details</string>

    <string name="txt_move_to_pipeline">Move To Pipeline</string>

    <string name="txt_user_name">User Name</string>

    <string name="txt_create_user">Create User</string>


    <string name="txt_update_user">Update User</string>

    <string name="txt_username">Username</string>

    <!--<>-->
    <string name="txt_user_password">Password</string>
    <!--<transport details>-->
    <string name="txt_user_type">User Type</string>
    <string name="txt_spn_gender">Gender</string>_

    <!--<user screen>-->
    <string name="txt_create_user_btn">Create User</string>_
    <string name="txt_update_user_btn">Update User</string>
    <string name="txt_enter_kiosk_count">Enter Kiosk Number</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_summary</item>
        <item>@string/nav_item_installation</item>
        <item>@string/nav_item_inventary</item>
        <item>@string/nav_item_users</item>
        <item>@string/nav_item_logout</item>
    </string-array>
    <string-array name="array_clinic_name">
        <item>@string/txt_clinic_name_1</item>
        <item>@string/txt_clinic_name_2</item>
        <item>@string/txt_clinic_name_3</item>
    </string-array>
    <string-array name="array_user_type">
        <item>@string/txt_no_user</item>
        <item>@string/txt_user_admin</item>
        <item>@string/txt_user_customer</item>
        <item>@string/txt_user_normal</item>
    </string-array>
    <string-array name="array_user_gender">
        <item>@string/txt_no_gender</item>
        <item>@string/txt_gender_male</item>
        <item>@string/txt_gender_female</item>
    </string-array>
    <string-array name="array_item_list">
        <item>@string/txt_item_name0</item>
        <item>@string/txt_item_name1</item>
        <item>@string/txt_item_name2</item>
        <item>@string/txt_item_name3</item>
        <item>@string/txt_item_name4</item>
    </string-array>
    <string-array name="array_category_list">
        <item>@string/txt_category_name0</item>
        <item>@string/txt_category_name1</item>
        <item>@string/txt_category_name2</item>
        <item>@string/txt_category_name3</item>
    </string-array>
    <string-array name="array_stock_out_category">
        <item>@string/txt_stock_out_category</item>
        <item>@string/txt_stock_out_category1</item>
        <item>@string/txt_stock_out_category2</item>
        <item>@string/txt_stock_out_category3</item>
        <item>@string/txt_stock_out_category4</item>
    </string-array>
</resources>
