<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Loginctivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/logo"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="15sp"
            android:hint="@string/txt_email"
            android:padding="@dimen/_8sdp"/>

        <EditText
            android:id="@+id/edt_gmail_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/txt_password"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:padding="@dimen/_8sdp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/btn_background"
            android:text="@string/txt_login"
            android:textAllCaps="false"
            android:padding="@dimen/_5sdp"
            android:textSize="15sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>


</RelativeLayout>