<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    tools:context=".fragments.AddToPipelineFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/txt_add_pipeline"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical"
                android:weightSum="1">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/txt_installataion_type"
                    android:textSize="15sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_installation_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/txt_pipeline"
                    android:padding="@dimen/_8sdp"
                    android:textSize="15sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/txt_clinic_location"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/spn_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/rectangle"
                    android:padding="@dimen/_8sdp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/txt_clinic_name"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/spn_clinic_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/rectangle"
                    android:padding="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/txt_clinic_id_name"
                    android:textSize="15sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/rectangle"
                    android:gravity="left"
                    android:id="@+id/tv_clinic_id"
                    android:padding="@dimen/_8sdp"
                    android:textSize="15sp" />

               <!-- <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:gravity="left">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Clinic ID"
                        android:textSize="@dimen/_18sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="21075"
                        android:textSize="@dimen/_18sdp" />
                </LinearLayout>-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/txt_gmail_id"
                    android:textSize="15sp" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_gmail_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle"
                    android:layout_margin="@dimen/_10sdp"
                    android:textSize="15sp"
                    android:padding="@dimen/_8sdp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:weightSum="1">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/txt_gmail_password"
                    android:textSize="15sp" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_gmail_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle"
                    android:layout_margin="@dimen/_10sdp"
                    android:textSize="15sp"
                    android:padding="@dimen/_8sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/txt_actofit_id"
                    android:textSize="15sp" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_actofit_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle"
                    android:layout_margin="@dimen/_10sdp"
                    android:textSize="15sp"
                    android:padding="@dimen/_8sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/txt_actofit_password"
                    android:textSize="15sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_actofit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle"
                    android:layout_margin="@dimen/_10sdp"
                    android:textSize="15sp"
                    android:padding="@dimen/_8sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/txt_actofit_expiry"
                    android:textSize="15sp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_actofit_expiry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle"
                    android:layout_margin="@dimen/_10sdp"
                    android:textSize="15sp"
                    android:padding="@dimen/_8sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/txt_client_name"
                    android:textSize="@dimen/_15sdp" />

                <Spinner
                    android:id="@+id/spn_client_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/rectangle"
                    android:padding="@dimen/_8sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_20sdp"
                    android:background="@drawable/btn_background"
                    android:text="Add To Pipeline"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</FrameLayout>